--- a/translator.css
+++ b/translator.css
@@ -94,7 +94,7 @@ body.front .translation-link {
 }
 
 .node {
-  text-align:center;
+
 }
 
 #centerimage {
@@ -134,6 +134,12 @@ li.menu-pager-next,li.menu-pager-previous {
   list-style:none;
   list-style-type:none;
 }
+
+.block-menu-pager ul {
+  margin-top:20px!important;
+  margin-left:-50px!important;
+}
+
 
 li.menu-pager-next a,li.menu-pager-previous a {
   outline:none;
@@ -347,7 +353,8 @@ article p button a {
 /* Footer Language Picker */
 
 footer {
-	display:none;
+  display:none;
+  text-align:center;
 }
 
 body.i18n footer, body.i18n-en footer{
@@ -365,7 +372,7 @@ body.il8n footer a {
   border-right:1px solid #337AB7;
 }
 
-body.il8n footer li.last a {
+body footer li.last a  {
   border-right:0px;
 }
 
@@ -373,7 +380,7 @@ body.il8n footer {
 	border:none;
 }
 
-body.i18n footer a. body.i18n-en footer a{
+body.i18n footer a, body.i18n-en footer a {
   padding-right:15px;
   border-right:1px solid #337AB7;
 }
@@ -393,4 +400,21 @@ body.front.il8n-ne  #block-block-2 {
 
 body.front.il8n #block-block-2, body.front.il8n-en #block-block-2 {
   display:block;
+}
+
+.field-name-field-translation {
+  text-align:center;
+  margin:25px auto;
+}
+
+.node-es-translate, .node-hs-translate {
+  text-align:center;
+}
+
+.node-es-translate .field-item.even, .node-hs-translate .field-item.even {
+  text-align:center;
+}
+
+.node-es-translate .field-item.even img, .node-hs-translate .field-item.even img {
+  margin:25px auto;
 }
